Fix issue #26 now the dropdown are visibles on :hover

--- a/web/bootstrap/css/style.css
+++ b/web/bootstrap/css/style.css
@@ -237,3 +237,9 @@ body a
     border-radius: 5px;
     max-width: 600px;
 }
+
+.dropdown-menu li:hover .sub-menu {
+   visibility: visible;
+}.dropdown:hover .dropdown-menu {
+   display: block;
+} 
